# etl_pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  database.py  main.py  schemas.py
api/models/: source.py
dagster_home/: dagster.yaml
etl/: __init__.py  assets.py  jobs.py  resources.py
models/: target.py
scripts/: init_source_db.py  init_target_db.py  run_etl.py
